Ingress-bkp.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: angular-ingress
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host: angular.minikube.local
      http:
        paths:
          - path: /
            backend:
              serviceName: angular-app
              servicePort: 4200
