Ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-gateway
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host: backend.minikube.local
      http:
        paths:
          - path: /
            backend:
              serviceName: employee-service
              servicePort: 8000
    - host: frontend.minikube.local
      http:
        paths:
          - path: /
            backend:
              serviceName: employee-frontend
              servicePort: 4200
    - host: mongo.example.com
      http:
        paths:
        - path: /
          backend:
            serviceName: mongodb # There is no extra service. This is 
            servicePort: 27017 # the headless service
    - host: angular.minikube.local
      http:
        paths:
          - path: /
            backend:
              serviceName: angular-app
              servicePort: 4200
